--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 		<h2>To Do List App</h2>
 		<p><em> Double click to mark an item off, click on "X" to delete an item, and drag items to reorder.</em></p>
        
-		<form name="toDoList">
-			<input type="text" name="ListItem" id="input"/>
-		</form>
-    
-		<div onclick="newItem()" id="button">Add</div>
+		<input type="text" name="ListItem" id="input"/>
+		<div id="button">Add</div>
 		<br/>
-		<ol id="list"></ol>
+		<button id="sort">sort list</button>
+		<ol id="list">
+
+		</ol>
   </div>
   <script
   src="https://code.jquery.com/jquery-3.5.1.js"
